// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default behavior should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="ballot"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <h1
                  class="pt-5"
                >
                  AWARDS 2021
                </h1>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="row"
                >
                  <div
                    class="col"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="col"
                      >
                        <div
                          class="row"
                        >
                          <div
                            class="text-left col"
                          >
                            <h1
                              class="category-header"
                            >
                              Best Picture
                            </h1>
                          </div>
                        </div>
                        <div
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <div
                              class="row"
                            >
                              <div
                                class="col-lg-4 col-md-6 col-12"
                              >
                                <div
                                  class="nominee-card card"
                                >
                                  <div
                                    class="card-body"
                                  >
                                    <div
                                      class="card-title h5"
                                    >
                                      Nomadland
                                    </div>
                                    <img
                                      class="rounded-circle img-thumbnail"
                                      src="https://variety.com/wp-content/uploads/2020/12/nomadland_ver2.jpg"
                                    />
                                    <button
                                      class="btn btn-primary btn-lg"
                                      type="button"
                                    >
                                      Select Button
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <button
                  class="mt-2 mb-3 submit-ballot-button btn btn-primary btn-lg"
                  type="button"
                >
                  SUBMIT BALLOT BUTTON
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="ballot"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <h1
                class="pt-5"
              >
                AWARDS 2021
              </h1>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col"
                    >
                      <div
                        class="row"
                      >
                        <div
                          class="text-left col"
                        >
                          <h1
                            class="category-header"
                          >
                            Best Picture
                          </h1>
                        </div>
                      </div>
                      <div
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <div
                            class="row"
                          >
                            <div
                              class="col-lg-4 col-md-6 col-12"
                            >
                              <div
                                class="nominee-card card"
                              >
                                <div
                                  class="card-body"
                                >
                                  <div
                                    class="card-title h5"
                                  >
                                    Nomadland
                                  </div>
                                  <img
                                    class="rounded-circle img-thumbnail"
                                    src="https://variety.com/wp-content/uploads/2020/12/nomadland_ver2.jpg"
                                  />
                                  <button
                                    class="btn btn-primary btn-lg"
                                    type="button"
                                  >
                                    Select Button
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <button
                class="mt-2 mb-3 submit-ballot-button btn btn-primary btn-lg"
                type="button"
              >
                SUBMIT BALLOT BUTTON
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`default behavior when I select a candidate and I click the submit button should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    data-rr-ui-modal-open=""
    style="padding-right: 2048px;"
  >
    <div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="ballot"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <h1
                  class="pt-5"
                >
                  AWARDS 2021
                </h1>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <div
                  class="row"
                >
                  <div
                    class="col"
                  >
                    <div
                      class="row"
                    >
                      <div
                        class="col"
                      >
                        <div
                          class="row"
                        >
                          <div
                            class="text-left col"
                          >
                            <h1
                              class="category-header"
                            >
                              Best Picture
                            </h1>
                          </div>
                        </div>
                        <div
                          class="row"
                        >
                          <div
                            class="col"
                          >
                            <div
                              class="row"
                            >
                              <div
                                class="col-lg-4 col-md-6 col-12"
                              >
                                <div
                                  class="nominee-card selected card"
                                >
                                  <div
                                    class="card-body"
                                  >
                                    <div
                                      class="card-title h5"
                                    >
                                      Nomadland
                                    </div>
                                    <img
                                      class="rounded-circle img-thumbnail"
                                      src="https://variety.com/wp-content/uploads/2020/12/nomadland_ver2.jpg"
                                    />
                                    <button
                                      class="btn btn-primary btn-lg"
                                      type="button"
                                    >
                                      Select Button
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="col"
              >
                <button
                  class="mt-2 mb-3 submit-ballot-button btn btn-primary btn-lg"
                  type="button"
                >
                  SUBMIT BALLOT BUTTON
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="fade modal-backdrop show"
    />
    <div
      aria-modal="true"
      class="fade modal show"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <div
              class="modal-title h4"
            >
              SUCCESS
            </div>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <h5>
                  The winner of 
                  Best Picture
                   is: 
                  Nomadland
                  !
                </h5>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="ballot"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <h1
                class="pt-5"
              >
                AWARDS 2021
              </h1>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col"
                    >
                      <div
                        class="row"
                      >
                        <div
                          class="text-left col"
                        >
                          <h1
                            class="category-header"
                          >
                            Best Picture
                          </h1>
                        </div>
                      </div>
                      <div
                        class="row"
                      >
                        <div
                          class="col"
                        >
                          <div
                            class="row"
                          >
                            <div
                              class="col-lg-4 col-md-6 col-12"
                            >
                              <div
                                class="nominee-card selected card"
                              >
                                <div
                                  class="card-body"
                                >
                                  <div
                                    class="card-title h5"
                                  >
                                    Nomadland
                                  </div>
                                  <img
                                    class="rounded-circle img-thumbnail"
                                    src="https://variety.com/wp-content/uploads/2020/12/nomadland_ver2.jpg"
                                  />
                                  <button
                                    class="btn btn-primary btn-lg"
                                    type="button"
                                  >
                                    Select Button
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col"
            >
              <button
                class="mt-2 mb-3 submit-ballot-button btn btn-primary btn-lg"
                type="button"
              >
                SUBMIT BALLOT BUTTON
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
